feat: Integração completa de captura de leads
- Adicionada API PHP para salvar leads no MySQL
- Conectado formulário da home ao banco Leads_DarkVoice
- Criado template de email de boas-vindas com identidade visual
- Implementada Black Friday Antecipada 2025
- Adicionados documentos legais (termos, privacidade, reembolso)
- Atualizado preço para R$ 247 (de R$ 397)
- Bônus TTS Emotion (R$ 297) para 100 primeiras pessoas
- Link de pagamento Kiwify atualizado
- Requisitos mínimos recomendados
- Removido backend antigo e mantido apenas landing page

--- a/client/src/locales/pt-BR.json
+++ b/client/src/locales/pt-BR.json
@@ -132,7 +132,7 @@
     },
     "pricing_section": {
       "title": "Sem plano mensal e preço único",
-      "price": "R$ 297",
+      "price": "R$ 397",
       "price_desc": "Pagamento único • Sem mensalidades",
       "features": [
         "Pague uma única vez e use sem limites",
@@ -142,7 +142,7 @@
         "Sem assinatura, sem cobranças recorrentes",
         "Atualizações inclusas"
       ],
-      "buy_button": "Comprar por R$ 297",
+      "buy_button": "GARANTIR VAGA POR R$ 247",
       "guarantee": "Compra segura pela Kiwify • Garantia de 7 dias"
     },
     "pricing_features": [
@@ -154,7 +154,7 @@
       "Atualizações inclusas"
     ],
     "requirements_section": {
-      "title": "Requisitos mínimos",
+      "title": "Requisitos mínimos recomendados",
       "system": "Sistema",
       "system_value": "Windows 10/11",
       "cpu": "CPU",
@@ -193,11 +193,11 @@
     "adv3_title": "Privacidade total",
     "adv3_desc": "Arquivos e dados não são enviados",
     "pricing_title": "Sem plano mensal e preço único",
-    "price": "R$ 297",
+    "price": "R$ 397",
     "price_desc": "Pagamento único • Sem mensalidades",
     "buy_button": "Quero ter o DarkVoice",
     "guarantee": "Compra segura com garantia de 7 dias",
-    "requirements_title": "Requisitos mínimos",
+    "requirements_title": "Requisitos mínimos recomendados",
     "req_os": "Windows 10/11",
     "req_cpu": "Quad-core 64-bit",
     "req_gpu": "NVIDIA CUDA Core (GTX 1060 ou superior)",
